--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "rateease-app",
   "version": "0.1.0",
@@ -38,11 +37,11 @@
     "embla-carousel-react": "^8.1.5",
     "jsbarcode": "^3.11.6",
     "lucide-react": "^0.378.0",
-    "next": "14.2.3",
+    "next": "14.2.4",
     "next-themes": "^0.3.0",
-    "react": "^18",
+    "react": "18.3.1",
     "react-day-picker": "^8.10.1",
-    "react-dom": "^18",
+    "react-dom": "18.3.1",
     "react-hook-form": "^7.51.3",
     "react-to-print": "^2.15.1",
     "react-wrap-balancer": "^1.1.1",
@@ -58,7 +57,7 @@
     "@types/react-dom": "^18",
     "autoprefixer": "^10.4.19",
     "eslint": "^8",
-    "eslint-config-next": "14.2.3",
+    "eslint-config-next": "14.2.4",
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.3",
     "typescript": "^5"
